# c-in-action

./: CMakeLists.txt  README.md  main.c  pun.c
array/: day_mon2.c  designate.c
basic/: Dweight.c  celsius.c  dweight2.c  dweight3.c  expands.c  initialization.c  printAsterisk.c  pun.c
basis/: helloWorld.c  macro.c
control/: cypher1.c  switch.c
file/: search_file.c
hello/: first.c
input/: input.c
io/: count.c  echo.c  echo_eof.c
pointer/: arf.c  array_data.c  ptr_ops.c  sum_arr1.c  swap1.c  swap3.c  zippo1.c
storage/: parta.c  partb.c
string/: p_and_s.c  repeat.c  strcat_pointer.c
test/: test.c
