cmake_minimum_required(VERSION 3.17)
project(c_in_action C)

set(CMAKE_C_STANDARD 99)

add_executable(pun basic/pun.c)
add_executable(dweight basic/dweight.c)
add_executable(dweight2 basic/dweight2.c)
add_executable(macro basic/macro.c)
add_executable(celsius basic/celsius.c)
add_executable(helloWorld basic/helloWorld.c)
add_executable(expands basic/expands.c)
add_executable(dweight3 basic/dweight3.c)
add_executable(initialization basic/initialization.c)
add_executable(printAsterisk basic/printAsterisk.c)